# advent-of-code-2021

./: README.md
day-01/src/: main.rs
day-02/: Cargo.toml
day-02/src/: main.rs
day-03/src/: main.rs
day-04/src/: main.rs
day-05/: Cargo.toml
day-05/src/: main.rs
day-06/src/: main.rs
day-07/src/: main.rs
day-08/: Cargo.toml
day-08/src/: main.rs
day-09/src/: main.rs
day-10/src/: main.rs
day-11/: using-pystencils.py
day-11/src/: main.rs
day-12/src/: main.rs
day-13/src/: main.rs
day-14/: Cargo.toml
day-14/src/: main.rs
day-15/: perf.data  perf.data.old  using-pystencils.py
day-15/src/: main.rs
day-16/: Cargo.toml
day-16/src/: main.rs
day-17/src/: main.rs
day-18/: Cargo.toml
day-18/src/: main.rs
day-19/: example
day-19/src/: main.rs
day-20/: Cargo.toml
day-20/src/: main.rs
day-21/: Cargo.toml
day-21/src/: main.rs
day-22/: Cargo.toml
day-22/src/: main.rs
day-23/: Cargo.toml
day-23/src/: main.rs
day-24/: Cargo.toml  dot
day-24/src/: alu.rs  generated.rs  instruction.rs  main.rs  op.rs
day-25/: Cargo.toml
day-25/src/: main.rs
