[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
itertools = "0.10.1"
regex = "1.5.4"
thiserror = "1.0.30"
num-bigint = "0.4.3"
im = "15.0.0"
measure_time = "0.8"

[target.x86_64-unknown-linux-gnu]
linker = "/usr/lib/ccache/clang-14"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]
