[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
itertools = "0.10.1"
regex = "1.5.4"
thiserror = "1.0.30"
priority-queue = "1.2.1"
serde_json = "1.0"
cgmath = "0.18"
once_cell = "1.9"
serde = { version = "1.0", features = ["derive"] }
