[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.15.0"}
anyhow = "1.0.51"
itertools = "0.10.1"
regex = "1.5.4"
thiserror = "1.0.30"
serde_json = "1.0"
once_cell = "1.9"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.5.1"
indicatif = { version = "0.16.2", features= ["rayon"] }
im = "15.0.0"
lru-cache = "0.1.2"
