[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
itertools = "0.10.1"
thiserror = "1.0.30"
combine = "4.6.2"
maplit = "1.0.2"
rayon = "1.5.1"
indicatif = { version = "0.16.2" }
